Full functionalities added: improve whole code

--- a/src/gws_fisy/fisy_app/_fisy_app/fisy_app/i18n/en.json
+++ b/src/gws_fisy/fisy_app/_fisy_app/fisy_app/i18n/en.json
@@ -1,6 +1,7 @@
 {
-  "app.title": "FISY — App",
+  "app.title": "Constellab Fisy",
 
+  "nav.home": "Home",
   "nav.config": "Configuration",
   "nav.input": "Input",
   "nav.activities": "Activities",
@@ -12,14 +13,46 @@
   "nav.funding": "Funding",
   "nav.results": "Results",
   "nav.results.dashboard": "Dashboards",
-  "nav.results.summary": "Summary (table)",
-  "nav.results.pnl": "Income statement (table)",
-  "nav.results.cashflow": "Cashflow (table)",
-  "nav.results.plan": "Funding plan (table)",
-  "nav.results.balance": "Balance sheets (tables)",
+  "nav.results.summary": "Summary",
+  "nav.results.pnl": "Income statement",
+  "nav.results.cashflow": "Cashflow",
+  "nav.results.plan": "Funding plan",
+  "nav.results.balance": "Balance sheets",
 
   "home.welcome": "Welcome 👋",
-  "home.desc": "Use the menu to enter your assumptions. Subscriptions also feed MRR in the summary.",
+  "home.title": "Build Your Financial Forecast Easily",
+  "home.subtitle": "A simple and powerful financial forecasting tool for entrepreneurs and business planners",
+  "home.desc": "Use the menu to enter your assumptions. Subscriptions also feed RR in the summary.",
+  "home.get_started": "Get Started",
+  "home.view_config": "Configure Settings",
+  
+  "home.features_title": "💼 Build Your Financial Forecast",
+  
+  "home.feature1.title": "Build Your Business Model",
+  "home.feature1.desc": "A financial forecast helps entrepreneurs consolidate their business model and strategy. Fisy is designed to help you with a simple and effective tool!",
+  
+  "home.feature2.title": "Validate Cash Flow & Funding Plan",
+  "home.feature2.desc": "Cash flow management is essential for startup success. Fisy helps you manage your projected cash flow and build your funding plan!",
+  
+  "home.feature3.title": "Iterate and Improve",
+  "home.feature3.desc": "A project is built and refined over time. Fisy is a powerful tool to test your assumptions and improve your business plan through iteration.",
+  
+  "home.feature4.title": "Export to Business Plan",
+  "home.feature4.desc": "Complete the financial section of your business plan with simple copy-paste to export your forecasts (income statements, funding plan, cash flow, etc.)!",
+  
+  "home.why.title": "Why Choose Fisy?",
+  
+  "home.why1.title": "Simple",
+  "home.why1.desc": "Create a financial forecast in 5 minutes without being a finance expert. Financial modeling has never been easier!",
+  
+  "home.why2.title": "Interactive",
+  "home.why2.desc": "Real-time calculations and interactive charts help you understand your financial projections at a glance.",
+  
+  "home.why3.title": "Reliable",
+  "home.why3.desc": "Built by experts for entrepreneurs. A proven tool used by thousands of startups worldwide.",
+  
+  "home.why4.title": "Comprehensive",
+  "home.why4.desc": "Complete financial statements including P&L, cash flow, balance sheet, and funding plan - all in one place.",
 
   "config.title": "General configuration",
   "config.desc": "Global model parameters.",
@@ -32,8 +65,8 @@
   "config.symbol": "Symbol:",
   "config.unit_shown": "Displayed unit:",
   "config.months": "Months (horizon)",
-  "config.vat_default": "VAT default",
-  "config.cit": "Corporate tax rate",
+  "config.vat_default": "VAT default (%)",
+  "config.cit": "Corporate tax rate (%)",
   "config.dso": "DSO (customer days)",
   "config.dpo": "DPO (supplier days)",
   "config.dio": "DIO (inventory days)",
@@ -46,31 +79,31 @@
   "activities.desc": "Set unit price (ex-VAT), VAT and variable costs.",
   "activities.name": "Activity",
   "activities.unit_price_ht": "Unit price ex-VAT",
-  "activities.vat_rate": "VAT",
+  "activities.vat_rate": "VAT (%)",
   "activities.var_cost_unit": "Variable cost per unit (ex-VAT)",
-  "activities.var_cost_rate": "Variable cost rate on price",
+  "activities.var_cost_rate": "Variable cost rate on price (%)",
 
   "one_time.title": "One-time Sales",
-  "one_time.desc": "Define one-time sales ranges with monthly growth (e.g., 0.05 = +5%/month).",
+  "one_time.desc": "Define one-time sales ranges with monthly growth rate (e.g., 5 = +5%/month).",
   "one_time.activity": "Activity",
   "one_time.start": "Start (month)",
   "one_time.end": "End (month)",
   "one_time.q0": "q0 (start)",
-  "one_time.growth": "Monthly growth",
+  "one_time.growth": "Monthly growth (%)",
 
   "subs.title": "Subscriptions (Recurring)",
-  "subs.desc": "Define subscription ranges (active per month) with monthly growth. MRR is computed in the summary.",
+  "subs.desc": "Define subscription ranges (active per month) with monthly growth. RR is computed in the summary.",
   "subs.activity": "Activity",
   "subs.start": "Start (month)",
   "subs.end": "End (month)",
   "subs.q0": "Subscribers (q0)",
-  "subs.growth": "Monthly growth",
+  "subs.growth": "Monthly growth (%)",
 
   "staff.title": "Staff",
   "staff.desc": "Add roles with gross salary, employer cost rate and headcount.",
   "staff.role": "Role / Title",
   "staff.gross": "Monthly gross salary",
-  "staff.rate": "Employer cost rate",
+  "staff.rate": "Employer cost rate (%)",
   "staff.count": "Employees (headcount)",
   "staff.start": "Start (month)",
   "staff.end": "End (month)",
@@ -79,7 +112,7 @@
   "charges.desc": "Monthly external charges (ex-VAT) with VAT and active period.",
   "charges.label": "Label",
   "charges.amount": "Monthly amount ex-VAT",
-  "charges.vat": "VAT",
+  "charges.vat": "VAT (%)",
   "charges.start": "Start (month)",
   "charges.end": "End (month)",
 
@@ -87,12 +120,15 @@
   "inv.desc": "Investments (ex-VAT), VAT, purchase month and amortization period.",
   "inv.label": "Label",
   "inv.amount": "Amount ex-VAT",
-  "inv.vat": "VAT",
+  "inv.vat": "VAT (%)",
   "inv.month": "Purchase month",
   "inv.amort": "Amortization years",
 
   "fund.title": "Funding",
   "fund.desc": "Capital injections, subsidies and loans.",
+  "fund.section.capital": "Capital Injections",
+  "fund.section.subsidies": "Subsidies",
+  "fund.section.loans": "Loans",
   "fund.cap.label": "Capital label",
   "fund.cap.amount": "Amount",
   "fund.cap.month": "Month",
@@ -101,22 +137,72 @@
   "fund.sub.month": "Month",
   "fund.loan.label": "Loan label",
   "fund.loan.principal": "Principal",
-  "fund.loan.rate": "Annual rate",
+  "fund.loan.rate": "Annual rate (%)",
   "fund.loan.months": "Term (months)",
   "fund.loan.start": "Start (month)",
 
+  "zoom.caption": "Time range:",
   "zoom.start": "Start (month)",
   "zoom.end": "End (month)",
+
+  "chart.variables": "Variables:",
+  "chart.period": "Period:",
+  "chart.type": "Type:",
+  "chart.yaxis": "Y-axis unit:",
+  "chart.period.monthly": "Monthly",
+  "chart.period.yearly": "Yearly",
+  "chart.type.line": "Line",
+  "chart.type.bar": "Bar",
+  "chart.yaxis.units": "€",
+  "chart.yaxis.thousands": "k€",
+  "chart.yaxis.millions": "M€",
 
   "results.dashboard": "Dashboards",
   "results.dashboard.desc": "Interactive charts. Displayed unit follows your currency & scale.",
   "results.syn": "Summary",
   "results.pnl": "Income Statement",
   "results.cf": "Cashflow",
+  "results.funding_plan": "Funding Plan",
+  "results.balance_sheets": "Balance Sheets",
+  "results.balance.assets": "Balance Sheet — Assets",
+  "results.balance.liabilities": "Balance Sheet — Liabilities",
 
   "results.tabs.annual": "Annual",
   "results.tabs.monthly": "Monthly",
 
   "sales.tabs.input": "Input",
-  "sales.tabs.evolution": "Evolution (quantities)"
+  "sales.tabs.evolution": "Evolution (quantities)",
+
+  "cols.ca_ht": "Turnover excl. VAT",
+  "cols.couts_variables_ht": "Variable costs excl. VAT",
+  "cols.marge_couts_variables_ht": "Margin on variable costs excl. VAT",
+  "cols.charges_personnel": "Personnel costs",
+  "cols.charges_externes": "External charges",
+  "cols.ebitda": "EBITDA",
+  "cols.amortissements": "Depreciation",
+  "cols.ebit": "EBIT",
+  "cols.is": "Corporate tax",
+  "cols.resultat_net": "Net income",
+  "cols.rr": "RR",
+  "cols.revenues": "Revenues",
+  "cols.variable_costs": "Variable costs",
+  "cols.gross_profit": "Gross profit",
+  "cols.personnel": "Personnel",
+  "cols.external_charges": "External charges",
+  "cols.depreciation": "Depreciation",
+  "cols.tax": "Tax",
+  "cols.net_income": "Net income",
+  "cols.operating_cf": "Operating CF",
+  "cols.investing_cf": "Investing CF",
+  "cols.financing_cf": "Financing CF",
+  "cols.cash_end": "Cash end",
+  "cols.month": "Month",
+  "cols.year": "Year",
+  "cols.capital_subsidies": "Capital+Subsidies",
+  "cols.capex": "Capex",
+  "cols.cash_variation": "Cash variation",
+  "cols.cash": "Cash",
+  "cols.net_fixed_assets": "Net fixed assets",
+  "cols.equity": "Equity (approx)",
+  "cols.liabilities": "Liabilities (placeholder)"
 }
