--- a/src/gws_fisy/fisy_app/_fisy_app/fisy_app/i18n/fr.json
+++ b/src/gws_fisy/fisy_app/_fisy_app/fisy_app/i18n/fr.json
@@ -1,6 +1,7 @@
 {
-  "app.title": "FISY — App",
+  "app.title": "Constellab Fisy",
 
+  "nav.home": "Accueil",
   "nav.config": "Configuration",
   "nav.input": "Saisie",
   "nav.activities": "Activités",
@@ -12,14 +13,46 @@
   "nav.funding": "Financement",
   "nav.results": "Résultats",
   "nav.results.dashboard": "Tableaux de bord",
-  "nav.results.summary": "Synthèse (table)",
-  "nav.results.pnl": "Compte de résultat (table)",
-  "nav.results.cashflow": "Trésorerie (table)",
-  "nav.results.plan": "Plan de financement (table)",
-  "nav.results.balance": "Bilans (tables)",
+  "nav.results.summary": "Synthèse",
+  "nav.results.pnl": "Compte de résultat",
+  "nav.results.cashflow": "Trésorerie",
+  "nav.results.plan": "Plan de financement",
+  "nav.results.balance": "Bilans",
 
   "home.welcome": "Bienvenue 👋",
-  "home.desc": "Utilisez le menu pour saisir vos hypothèses. Les abonnements alimentent aussi le MRR de la synthèse.",
+  "home.title": "Construisez Facilement Vos Prévisions Financières",
+  "home.subtitle": "Un outil de prévision financière simple et puissant pour entrepreneurs et planificateurs d'affaires",
+  "home.desc": "Utilisez le menu pour saisir vos hypothèses. Les abonnements alimentent aussi le RR de la synthèse.",
+  "home.get_started": "Commencer",
+  "home.view_config": "Configurer les Paramètres",
+  
+  "home.features_title": "💼 Construisez Vos Prévisions Financières",
+  
+  "home.feature1.title": "Construire son Business Model",
+  "home.feature1.desc": "Un prévisionnel financier aide l'entrepreneur à consolider son business model et sa stratégie. Fisy a été conçu pour aider l'entrepreneur avec un outil simple et efficace !",
+  
+  "home.feature2.title": "Valider sa Trésorerie et son Plan de Financement",
+  "home.feature2.desc": "La gestion de la trésorerie est essentielle pour la réussite d'une startup. Fisy aide l'entrepreneur à gérer sa trésorerie prévisionnelle et construire son plan de financement !",
+  
+  "home.feature3.title": "Itérer et Améliorer",
+  "home.feature3.desc": "Un projet se construit et s'affine au fur et à mesure. Fisy est un outil puissant pour tester vos hypothèses et améliorer votre business plan par itération.",
+  
+  "home.feature4.title": "Exporter dans son Business Plan",
+  "home.feature4.desc": "Complétez la partie financière de votre business plan avec un simple copier-coller pour exporter vos prévisions (comptes de résultats, plan de financement, trésorerie, etc.) !",
+  
+  "home.why.title": "Pourquoi Choisir Fisy ?",
+  
+  "home.why1.title": "Simple",
+  "home.why1.desc": "Réalisez un prévisionnel financier en 5 minutes sans être un expert en finance. Faire un modèle financier n'a jamais été aussi facile !",
+  
+  "home.why2.title": "Interactif",
+  "home.why2.desc": "Calculs en temps réel et graphiques interactifs pour comprendre vos projections financières d'un coup d'œil.",
+  
+  "home.why3.title": "Fiable",
+  "home.why3.desc": "Conçu par des experts pour les entrepreneurs. Un outil éprouvé utilisé par des milliers de startups dans le monde.",
+  
+  "home.why4.title": "Complet",
+  "home.why4.desc": "États financiers complets incluant compte de résultat, trésorerie, bilan et plan de financement - tout en un seul endroit.",
 
   "config.title": "Configuration générale",
   "config.desc": "Paramètres globaux du modèle.",
@@ -32,8 +65,8 @@
   "config.symbol": "Symbole :",
   "config.unit_shown": "Unité affichée :",
   "config.months": "Mois (horizon)",
-  "config.vat_default": "TVA par défaut",
-  "config.cit": "Taux d'IS",
+  "config.vat_default": "TVA par défaut (%)",
+  "config.cit": "Taux d'IS (%)",
   "config.dso": "DSO (jours clients)",
   "config.dpo": "DPO (jours fournisseurs)",
   "config.dio": "DIO (jours stock)",
@@ -46,31 +79,31 @@
   "activities.desc": "Définissez le prix unitaire HT, la TVA et les coûts variables.",
   "activities.name": "Nom de l'activité",
   "activities.unit_price_ht": "Prix unitaire HT",
-  "activities.vat_rate": "TVA",
+  "activities.vat_rate": "TVA (%)",
   "activities.var_cost_unit": "Coût variable unitaire HT",
-  "activities.var_cost_rate": "Taux de coût variable sur prix",
+  "activities.var_cost_rate": "Taux de coût variable sur prix (%)",
 
   "one_time.title": "Vente ponctuelle",
-  "one_time.desc": "Définissez des plages de ventes ponctuelles avec croissance mensuelle (ex. 0.05 = +5%/mois).",
+  "one_time.desc": "Définissez des plages de ventes ponctuelles avec croissance mensuelle (ex. 5 = +5%/mois).",
   "one_time.activity": "Activité",
   "one_time.start": "Début (mois)",
   "one_time.end": "Fin (mois)",
   "one_time.q0": "q0 (départ)",
-  "one_time.growth": "Croissance mensuelle",
+  "one_time.growth": "Croissance mensuelle (%)",
 
   "subs.title": "Abonnements (Ventes récurrentes)",
-  "subs.desc": "Définissez des plages d'abonnements (actifs chaque mois) avec croissance mensuelle. Le MRR est calculé dans la synthèse.",
+  "subs.desc": "Définissez des plages d'abonnements (actifs chaque mois) avec croissance mensuelle. Le RR est calculé dans la synthèse.",
   "subs.activity": "Activité",
   "subs.start": "Début (mois)",
   "subs.end": "Fin (mois)",
   "subs.q0": "Abonnés (q0)",
-  "subs.growth": "Croissance mensuelle",
+  "subs.growth": "Croissance mensuelle (%)",
 
   "staff.title": "Personnel",
   "staff.desc": "Ajoutez des postes avec salaire brut, charges employeur et effectif.",
   "staff.role": "Poste",
   "staff.gross": "Salaire brut mensuel",
-  "staff.rate": "Taux charges employeur",
+  "staff.rate": "Taux charges employeur (%)",
   "staff.count": "Nombre d'employés",
   "staff.start": "Début (mois)",
   "staff.end": "Fin (mois)",
@@ -79,7 +112,7 @@
   "charges.desc": "Charges mensuelles (HT) avec TVA et période d'application.",
   "charges.label": "Libellé",
   "charges.amount": "Montant mensuel HT",
-  "charges.vat": "TVA",
+  "charges.vat": "TVA (%)",
   "charges.start": "Début (mois)",
   "charges.end": "Fin (mois)",
 
@@ -87,12 +120,15 @@
   "inv.desc": "Investissements (HT), TVA, mois d'achat et durée d'amortissement.",
   "inv.label": "Libellé",
   "inv.amount": "Montant HT",
-  "inv.vat": "TVA",
+  "inv.vat": "TVA (%)",
   "inv.month": "Mois d'achat",
   "inv.amort": "Années d'amortissement",
 
   "fund.title": "Financement",
   "fund.desc": "Apports, subventions et prêts.",
+  "fund.section.capital": "Apports",
+  "fund.section.subsidies": "Subventions",
+  "fund.section.loans": "Prêts",
   "fund.cap.label": "Libellé apport",
   "fund.cap.amount": "Montant",
   "fund.cap.month": "Mois",
@@ -101,22 +137,72 @@
   "fund.sub.month": "Mois",
   "fund.loan.label": "Libellé prêt",
   "fund.loan.principal": "Principal",
-  "fund.loan.rate": "Taux annuel",
+  "fund.loan.rate": "Taux annuel (%)",
   "fund.loan.months": "Durée (mois)",
   "fund.loan.start": "Début (mois)",
 
+  "zoom.caption": "Plage de temps :",
   "zoom.start": "Début (mois)",
   "zoom.end": "Fin (mois)",
+
+  "chart.variables": "Variables :",
+  "chart.period": "Période :",
+  "chart.type": "Type :",
+  "chart.yaxis": "Unité axe Y :",
+  "chart.period.monthly": "Mensuel",
+  "chart.period.yearly": "Annuel",
+  "chart.type.line": "Ligne",
+  "chart.type.bar": "Barre",
+  "chart.yaxis.units": "€",
+  "chart.yaxis.thousands": "k€",
+  "chart.yaxis.millions": "M€",
 
   "results.dashboard": "Tableaux de bord",
   "results.dashboard.desc": "Graphiques interactifs. L'unité affichée tient compte de la monnaie et de l'échelle.",
   "results.syn": "Synthèse",
   "results.pnl": "Compte de résultat",
   "results.cf": "Trésorerie",
+  "results.funding_plan": "Plan de financement",
+  "results.balance_sheets": "Bilans",
+  "results.balance.assets": "Bilan — Actif",
+  "results.balance.liabilities": "Bilan — Passif",
 
   "results.tabs.annual": "Annuel",
   "results.tabs.monthly": "Mensuel",
 
   "sales.tabs.input": "Saisie",
-  "sales.tabs.evolution": "Évolution (quantités)"
+  "sales.tabs.evolution": "Évolution (quantités)",
+
+  "cols.ca_ht": "CA HT",
+  "cols.couts_variables_ht": "Coûts variables HT",
+  "cols.marge_couts_variables_ht": "Marge sur coûts variables HT",
+  "cols.charges_personnel": "Charges de personnel",
+  "cols.charges_externes": "Charges externes",
+  "cols.ebitda": "EBITDA",
+  "cols.amortissements": "Amortissements",
+  "cols.ebit": "EBIT",
+  "cols.is": "IS",
+  "cols.resultat_net": "Résultat net",
+  "cols.rr": "RR",
+  "cols.revenues": "Revenus",
+  "cols.variable_costs": "Coûts variables",
+  "cols.gross_profit": "Marge brute",
+  "cols.personnel": "Personnel",
+  "cols.external_charges": "Charges externes",
+  "cols.depreciation": "Amortissements",
+  "cols.tax": "Impôts",
+  "cols.net_income": "Résultat net",
+  "cols.operating_cf": "CF opérationnel",
+  "cols.investing_cf": "CF d'investissement",
+  "cols.financing_cf": "CF de financement",
+  "cols.cash_end": "Trésorerie finale",
+  "cols.month": "Mois",
+  "cols.year": "Année",
+  "cols.capital_subsidies": "Apports+Subventions",
+  "cols.capex": "Capex",
+  "cols.cash_variation": "Variation Trésorerie",
+  "cols.cash": "Trésorerie",
+  "cols.net_fixed_assets": "Immobilisations nettes",
+  "cols.equity": "Capitaux propres (approx)",
+  "cols.liabilities": "Dettes (placeholder)"
 }
